# padaria

./: app.py  pyproject.toml  requirement.txt
instance/: padaria.db
templates/: base.html  cadastrar.html  index.html  produtos.html
